RESOLVED FIXED156887
WKWebView HTML5 AppCache not working
https://bugs.webkit.org/show_bug.cgi?id=156887
Summary WKWebView HTML5 AppCache not working
Anders Carlsson
Reported 2016-04-21 17:52:53 PDT
WKWebView HTML5 AppCache not working
Attachments
Patch (2.83 KB, patch)
2016-04-21 17:54 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-04-21 17:54:10 PDT
Anders Carlsson
Comment 2 2016-04-21 18:05:37 PDT
Note You need to log in before you can comment on or make changes to this bug.