WKWebView HTML5 AppCache not working https://bugs.webkit.org/show_bug.cgi?id=156887 rdar://problem/17944162

Reviewed by Tim Horton.

* Shared/WebPreferencesDefinitions.h:
Set the offlineWebApplicationCacheEnabled property to true by default.

* UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
(API::WebsiteDataStore::defaultDataStoreConfiguration):
Set the default applicationCacheFlatFileSubdirectoryName to "Files".

Canonical link: https://commits.webkit.org/174989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199854 268f45cc-cd09-0410-ab3c-d52691b4dbfc